include_ver_2_beta_2/freetype.h

  
  typedef unsigned char  FT_Bool;
  typedef signed short  FT_Short;
  typedef int  FT_Int;
  typedef signed long  FT_Fixed;
  typedef struct  FT_Matrix_
  {
    FT_Fixed  xx, xy;
    FT_Fixed  yx, yy;
  } FT_Matrix;
  typedef struct  FT_Glyph_Metrics_
  {
    FT_Pos  width;         
    FT_Pos  height;        
    FT_Pos  horiBearingX;  
    FT_Pos  horiBearingY;  
    FT_Pos  horiAdvance;   
    FT_Pos  vertBearingX;  
    FT_Pos  vertBearingY;  
    FT_Pos  vertAdvance;   
  } FT_Glyph_Metrics;