lib/src/generated_bindings.dart


  late final _FT_Vector_TransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<FT_Vector>,
              ffi.Pointer<FT_Matrix>)>>('FT_Vector_Transform');
  late final _FT_Vector_Transform = _FT_Vector_TransformPtr.asFunction<
      void Function(ffi.Pointer<FT_Vector>, ffi.Pointer<FT_Matrix>)>();

  /// @function:
  /// FT_Library_Version
  ///
  /// @description:
  /// Return the version of the FreeType library being used.  This is useful
  /// when dynamically linking to the library, since one cannot use the
  /// macros @FREETYPE_MAJOR, @FREETYPE_MINOR, and @FREETYPE_PATCH.
  ///
  /// @input:
  /// library ::
  /// A source library handle.
  ///
  /// @output:
  /// amajor ::
  /// The major version number.
  ///
  /// aminor ::
  /// The minor version number.
  ///
  /// apatch ::
  /// The patch version number.
  ///
  /// @note:
  /// The reason why this function takes a `library` argument is because
  /// certain programs implement library initialization in a custom way that
  /// doesn't use @FT_Init_FreeType.
  ///
  /// In such cases, the library version might not be available before the
  /// library object has been created.
  void FT_Library_Version(
    FT_Library library1,
    ffi.Pointer<FT_Int> amajor,
    ffi.Pointer<FT_Int> aminor,
    ffi.Pointer<FT_Int> apatch,
  ) {
    return _FT_Library_Version(
      library1,
      amajor,
      aminor,
      apatch,
    );
  }

  late final _FT_Library_VersionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(FT_Library, ffi.Pointer<FT_Int>,
              ffi.Pointer<FT_Int>, ffi.Pointer<FT_Int>)>>('FT_Library_Version');
  late final _FT_Library_Version = _FT_Library_VersionPtr.asFunction<
      void Function(FT_Library, ffi.Pointer<FT_Int>, ffi.Pointer<FT_Int>,
          ffi.Pointer<FT_Int>)>();

  /// @function:
  /// FT_Face_CheckTrueTypePatents
  ///
  /// @description:
  /// Deprecated, does nothing.
  ///
  /// @input:
  /// face ::
  /// A face handle.
  ///
  /// @return:
  /// Always returns false.
  ///
  /// @note:
  /// Since May 2010, TrueType hinting is no longer patented.
  ///
  /// @since:
  /// 2.3.5
  int FT_Face_CheckTrueTypePatents(
    FT_Face face,
  ) {
    return _FT_Face_CheckTrueTypePatents(
      face,
    );
  }

  late final _FT_Face_CheckTrueTypePatentsPtr =
      _lookup<ffi.NativeFunction<FT_Bool Function(FT_Face)>>(
          'FT_Face_CheckTrueTypePatents');
  late final _FT_Face_CheckTrueTypePatents =
      _FT_Face_CheckTrueTypePatentsPtr.asFunction<int Function(FT_Face)>();

  /// @function:
  /// FT_Face_SetUnpatentedHinting
  ///
  /// @description:
  /// Deprecated, does nothing.
  ///
  /// @input:
  /// face ::
  /// A face handle.
  ///
  /// value ::
  /// New boolean setting.
  ///
  /// @return:
  /// Always returns false.
  ///
  /// @note:
  /// Since May 2010, TrueType hinting is no longer patented.
  ///
  /// @since:
  /// 2.3.5
  int FT_Face_SetUnpatentedHinting(
    FT_Face face,
    int value,
  ) {
    return _FT_Face_SetUnpatentedHinting(
      face,
      value,
    );
  }

  late final _FT_Face_SetUnpatentedHintingPtr =
      _lookup<ffi.NativeFunction<FT_Bool Function(FT_Face, FT_Bool)>>(
          'FT_Face_SetUnpatentedHinting');
  late final _FT_Face_SetUnpatentedHinting =
      _FT_Face_SetUnpatentedHintingPtr.asFunction<int Function(FT_Face, int)>();
}

/// @struct:
/// FT_Glyph_Metrics
///
/// @description:
/// A structure to model the metrics of a single glyph.  The values are
/// expressed in 26.6 fractional pixel format; if the flag
/// @FT_LOAD_NO_SCALE has been used while loading the glyph, values are
/// expressed in font units instead.
///
/// @fields:
/// width ::
/// The glyph's width.
///
/// height ::
/// The glyph's height.
///
/// horiBearingX ::
/// Left side bearing for horizontal layout.
///
/// horiBearingY ::
/// Top side bearing for horizontal layout.
///
/// horiAdvance ::
/// Advance width for horizontal layout.
///
/// vertBearingX ::
/// Left side bearing for vertical layout.
///
/// vertBearingY ::
/// Top side bearing for vertical layout.  Larger positive values mean
/// further below the vertical glyph origin.
///
/// vertAdvance ::
/// Advance height for vertical layout.  Positive values mean the glyph
/// has a positive advance downward.
///
/// @note:
/// If not disabled with @FT_LOAD_NO_HINTING, the values represent
/// dimensions of the hinted glyph (in case hinting is applicable).
///
/// Stroking a glyph with an outside border does not increase
/// `horiAdvance` or `vertAdvance`; you have to manually adjust these
/// values to account for the added width and height.
///
/// FreeType doesn't use the 'VORG' table data for CFF fonts because it
/// doesn't have an interface to quickly retrieve the glyph height.  The
/// y~coordinate of the vertical origin can be simply computed as
/// `vertBearingY + height` after loading a glyph.
final class FT_Glyph_Metrics_ extends ffi.Struct {
  @FT_Pos()
  external int width;

  @FT_Pos()
  external int height;

  @FT_Pos()
  external int horiBearingX;

  @FT_Pos()
  external int horiBearingY;

  @FT_Pos()
  external int horiAdvance;

  @FT_Pos()
  external int vertBearingX;

  @FT_Pos()
  external int vertBearingY;

  @FT_Pos()
  external int vertAdvance;
}

/// @type:
/// FT_Pos
///
/// @description:
/// The type FT_Pos is used to store vectorial coordinates.  Depending on
/// the context, these can represent distances in integer font units, or
/// 16.16, or 26.6 fixed-point pixel coordinates.
typedef FT_Pos = ffi.Long;
typedef DartFT_Pos = int;

/// @struct:
/// FT_Bitmap_Size
///
/// @description:
/// This structure models the metrics of a bitmap strike (i.e., a set of
/// glyphs for a given point size and resolution) in a bitmap font.  It is
/// used for the `available_sizes` field of @FT_Face.
///
/// @fields:
/// height ::
/// The vertical distance, in pixels, between two consecutive baselines.
/// It is always positive.
///
/// width ::
/// The average width, in pixels, of all glyphs in the strike.
///
/// size ::
/// The nominal size of the strike in 26.6 fractional points.  This
/// field is not very useful.
///
/// x_ppem ::
/// The horizontal ppem (nominal width) in 26.6 fractional pixels.
///
/// y_ppem ::
/// The vertical ppem (nominal height) in 26.6 fractional pixels.
///
/// @note:
/// Windows FNT:
/// The nominal size given in a FNT font is not reliable.  If the driver
/// finds it incorrect, it sets `size` to some calculated values, and
/// `x_ppem` and `y_ppem` to the pixel width and height given in the
/// font, respectively.
///
/// TrueType embedded bitmaps:
/// `size`, `width`, and `height` values are not contained in the bitmap
/// strike itself.  They are computed from the global font parameters.
final class FT_Bitmap_Size_ extends ffi.Struct {
  @FT_Short()
  external int height;

  @FT_Short()
  external int width;

  @FT_Pos()
  external int size;

  @FT_Pos()
  external int x_ppem;

  @FT_Pos()
  external int y_ppem;
}

/// @type:
/// FT_Short
///
/// @description:
/// A typedef for signed short.
typedef FT_Short = ffi.Short;
typedef DartFT_Short = int;

final class FT_LibraryRec_ extends ffi.Opaque {}

final class FT_ModuleRec_ extends ffi.Opaque {}

final class FT_DriverRec_ extends ffi.Opaque {}

final class FT_RendererRec_ extends ffi.Opaque {}
